<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/titlebar"
        layout="@layout/main_titlebar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingLeft="24.0dip"
                android:paddingRight="24.0dip">

                <common.view.RegularTextView
                    android:id="@+id/feedback_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="40.0dip"
                    android:text="@string/text_feedback_content_title"
                    android:textColor="#ff293336"
                    android:textSize="20.0sp" />

                <EditText
                    style="@style/EditStyle"
                    android:id="@+id/feedback_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/feedback_title"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="17.0dip"
                    android:background="@android:color/transparent"
                    android:hint="@string/text_feedback_content_hint"
                    android:inputType="textMultiLine"
                    android:textColor="#ff505050"
                    android:textColorHint="#ff7e8e96"
                    android:textCursorDrawable="@null"
                    android:textSize="14.0sp" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/feedback_content"
                    android:layout_marginTop="6.0dip">

                    <View
                        android:id="@+id/imageViewNotFocused"
                        android:layout_width="fill_parent"
                        android:layout_height="1.0dip"
                        android:background="#ffd4d4d4" />

                    <View
                        android:id="@+id/imageViewFocused"
                        android:layout_width="fill_parent"
                        android:layout_height="2.0dip"
                        android:layout_gravity="center_horizontal"
                        android:background="#ff82c9ff"
                        android:visibility="invisible" />
                </FrameLayout>

                <common.view.RegularTextView
                    android:id="@+id/feedback_emailtitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/feedback_content"
                    android:layout_marginTop="26.0dip"
                    android:text="@string/text_feedback_email_title"
                    android:textColor="#ff293336"
                    android:textSize="20.0sp" />

                <EditText
                    style="@style/EditStyle"
                    android:id="@+id/feedback_contact"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/feedback_emailtitle"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="17.0dip"
                    android:background="@android:color/transparent"
                    android:hint="@string/text_feedback_email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="#ff505050"
                    android:textColorHint="#ff7e8e96"
                    android:textCursorDrawable="@null"
                    android:textSize="14.0sp" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/feedback_contact"
                    android:layout_marginTop="6.0dip">

                    <View
                        android:id="@+id/imageViewEmailNotFocused"
                        android:layout_width="fill_parent"
                        android:layout_height="1.0dip"
                        android:background="#ffd4d4d4" />

                    <View
                        android:id="@+id/imageViewEmailFocused"
                        android:layout_width="fill_parent"
                        android:layout_height="2.0dip"
                        android:layout_gravity="center_horizontal"
                        android:background="#ff82c9ff"
                        android:visibility="invisible" />
                </FrameLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/feedback_submitEnable"
                    android:layout_width="343.0dip"
                    android:layout_height="94.0dip"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20.0dip"
                    android:background="@drawable/round_btn_on_feedback_page_selector"
                    android:text="@string/text_feedback_commit"
                    android:textColor="#ffffffff"
                    android:textSize="16.0sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/feedback_submitDisable"
                    android:layout_width="343.0dip"
                    android:layout_height="94.0dip"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20.0dip"
                    android:background="@drawable/round_btn_feedback_page_disable"
                    android:text="@string/text_feedback_commit"
                    android:textColor="#ffffffff"
                    android:textSize="16.0sp"
                    android:visibility="invisible" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>